# copula-short-course

./: .env.local.example  .gitignore  10_vinecopula_inference.ipynb  11_amh_estimation.ipynb  13_univariatetimeseries.ipynb  1_introduction.ipynb  2_correlationcoefficient.ipynb  2_pearsoncorrelationcoefficient.ipynb  3_pearsoncorrelation_deficiencies.ipynb  4_dependence_metrics.ipynb  5_beyondmetrics.ipynb  6_copula_intro.ipynb  7_closed_form_copulas.ipynb  8_fittingdata.ipynb  9_vinecopula_intro.ipynb  README.md  pyproject.toml
notebooks/: 10_vinecopula_inference.ipynb  11_amh_estimation.ipynb  13_univariatetimeseries.ipynb  1_introduction.ipynb  2_pearsoncorrelationcoefficient.ipynb  3_pearsoncorrelation_deficiencies.ipynb  4_dependence_metrics.ipynb  5_beyondmetrics.ipynb  6_copula_intro.ipynb  7_closed_form_copulas.ipynb  8_fittingdata.ipynb  9_vinecopula_intro.ipynb
